--- a/templates/admin/comiclist.html.twig
+++ b/templates/admin/comiclist.html.twig
@@ -4,8 +4,7 @@
 
 {% block body %}
 
-<div class="container" xmlns="http://www.w3.org/1999/html">
-    <div class="col-10" id="hb-approve-comics">
+<div class="col p-3">
         <h1>Approve Comics</h1>
         <table class="table table-striped">
             <thead>
@@ -18,22 +17,22 @@
             </thead>
             <tbody>
                 {% for comic in comics %}
-                    <tr class="{% if comic.approved %}bg-success text-white{% endif %}">
+                    <tr>
                         <td><a class="btn {% if comic.approved %}btn-primary{% else %}btn-outline-primary{% endif %}" href="{{ url('app_togglecomicapprove', { id: comic.id}) }}"><i class="fas fa-check"></i></a></td>
                         <td>{{ comic.name }}</td>
                         <td>{% if comic.user.Name %}{{ comic.user.Name }}{% else %}{{ comic.user.email }}{% endif %}</td>
                         <td>
-                            <span class="fa-layers fa-fw" >
-                                <i class="fas fa-image"></i>
-                                <span class="fa-layers-text">{{ comic.images|length }}</span>
-                            </span>
+                            {% if comic.images|length == 0 %}
+                                <i class="fas fa-close text-danger"></i>
+                            {% else %}
+                                <i class="fas fa-image"></i> {{ comic.images|length }}
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
-</div>
 
 {% endblock %}
 
