--- a/templates/admin/inviteusers.html.twig
+++ b/templates/admin/inviteusers.html.twig
@@ -3,18 +3,18 @@
 {% block title %}Invite Users{% endblock %}
 
 {% block body %}
-<div class="container">
-    <div class="card col p-3 mt-5 panel" id="c4-comic-admin">
+    <div class="col p-3">
         <div class="row mb-3">
             <div class="col">
                 <h1>Invite Users</h1>
             </div>
-            <div class="col-2"><a href="{{ url('app_manageuser') }}" class="btn btn-outline-light"><i class="fas fa-users"></i> User Management</a></div>
+            <div class="col-2"><a href="{{ url('app_manageuser') }}" class="btn btn-outline-light"><i
+                            class="fas fa-users"></i> User Management</a></div>
         </div>
         <div class="row mb-3">
             <div class="col-4">
                 <h5>Instructions</h5>
-                <p>Put one email per line.  An invite code will be generated and emailed to each user.</p>
+                <p>Put one email per line. An invite code will be generated and emailed to each user.</p>
             </div>
             <div class="col-4">
                 {{ form_start(inviteForm) }}
@@ -23,7 +23,6 @@
         </div>
 
     </div>
-</div>
 
 {% endblock %}
 
