--- a/templates/admin/settings.html.twig
+++ b/templates/admin/settings.html.twig
@@ -3,8 +3,7 @@
 {% block title %}Server Settings{% endblock %}
 
 {% block body %}
-<div class="container">
-    <div class=" col p-3 mt-5 panel" id="">
+    <div class=" col p-3" id="">
         <div class="row mb-3">
             <div class="col">
                 <h1>Server Settings</h1>
@@ -32,10 +31,6 @@
 
 
         {{ form_end(settingsForm)}}
-
-
-
-    </div>
 </div>
 
 {% endblock %}
