--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,52 +1,53 @@
-{% set headeroffset = "-8 offset-2" %}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<div class="container">
-    <div class="card mt-5 p-3 col-8 offset-2">
-        <div class="row" id="register-staff-screen">
-            <div class="col  p-3">
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+<div class="col col-8 offset-2 p-3">
+    <div class="row">
+            <form method="post">
+                {% if error %}
+                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-    <div class="row mb-2">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    </div>
-    <div class="row mb-2">
-        <label for="inputEmail" class="col-form-label col-3 text-end">Email:</label>
-        <div class="col">
-            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-        </div>
-    </div>
-    <div class="row mb-2">
-    <label for="inputPassword" class="col-form-label col-3 text-end">Password:</label>
-        <div class="col">
-            <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-        </div>
-    </div>
+                {% if app.user %}
+                    <div class="row mb-3">
+                        You are logged in as {{ app.user.userIdentifier }}, <a
+                                href="{{ path('app_logout') }}">Logout</a>
+                    </div>
+                {% endif %}
+                <div class="row mb-2">
+                    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+                </div>
+                <div class="row mb-2">
+                    <label for="inputEmail" class="col-form-label col-3 text-end">Email:</label>
+                    <div class="col">
+                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail"
+                               class="form-control" autocomplete="email" required autofocus>
+                    </div>
+                </div>
+                <div class="row mb-2">
+                    <label for="inputPassword" class="col-form-label col-3 text-end">Password:</label>
+                    <div class="col">
+                        <input type="password" name="password" id="inputPassword" class="form-control"
+                               autocomplete="current-password" required>
+                    </div>
+                </div>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-    <div class="row mb-2">
-        <div class="col offset-3">
-            <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
-        </div>
-        <div class="col-3 text-end">
-            <a href="{{ url('app_forgot_password_request') }}">Forgot your password?</a>
-        </div>
-</form>
-            </div>
+                <input type="hidden" name="_csrf_token"
+                       value="{{ csrf_token('authenticate') }}"
+                >
+                <div class="row mb-2">
+                    <div class="col offset-3">
+                        <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
+                    </div>
+                    <div class="col-3 text-end">
+                        <a href="{{ url('app_forgot_password_request') }}">Forgot your password?</a>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-</div>
-{% endblock %}
+    {% endblock %}
+{% block sidebar %}{% endblock %}
