--- a/templates/user/edituser.html.twig
+++ b/templates/user/edituser.html.twig
@@ -3,13 +3,12 @@
 {% block title %}Update User{% endblock %}
 
 {% block body %}
-<div class="col align-items-center justify-content-center pt-5">
-    <div class="col-10" id="register-staff-screen">
+<div class="col p-3">
         <div class="row">
-            <div class="col border p-3">
+            <div class="col">
                 <div class="row mb-3">
                     <div class="col">
-                        <h1 class="h3 mb-3 font-weight-normal">Create/Update Comic</h1>
+                        <h1>Edit User</h1>
                     </div>
                 </div>
 
