--- a/templates/common/sidebar.html.twig
+++ b/templates/common/sidebar.html.twig
@@ -122,7 +122,13 @@
         </div>
 
 
-
+        <div class="row border-top mt-3 pt-3 "></div>
+        <div class="row ps-3 mb-2">
+            <div class="col-2 ms-2 me-4">
+                <a href="{{ url('app_credits') }}" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="top" title="Acknowledgements"><i class="fas fa-people-group"></i></a>
+            </div>
+            <div class="col nav-expanded"><a href="{{ url('app_credits') }}" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="top" title="Credits">Credits</a></div>
+        </div>
 
     </div>
 </div>
